--- a/pomodoro/package.json
+++ b/pomodoro/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.4",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
